# Rust_drone

./: Cargo.toml
architecture/: Cargo.toml
architecture/src/: control_request_impl.rs  lib.rs
basestation/: Cargo.toml
basestation/src/: lib.rs
dronecode/: Cargo.toml
dronecode/src/: base_station.rs  control.rs  control_loop.rs  funcdisk.rs  kalman_filter.rs  liveness.rs  lowpassfilter.rs  main.rs  message.rs  profiling.rs  sensor.rs  state_machine.rs  yaw_pitch_roll_quaternion.rs
