cargo-features = ["per-package-target"]

[package]
name = "architecture"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tudelft-quadrupel = {version="1"}
micromath = "2.0.0"
serde = { version = "1.0.150", default-features = false, features = ["derive", "alloc"] }
#serde_arrays = "0.1.0"
enum-map = "2.5.0"

[dependencies.fixed]
version = "1.23"
features = ["serde"]
