cargo-features = ["per-package-target"]

[package]
name = "basestation"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"
#forced-target = "x86_64-pc-windows-msvc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
architecture = {path="../architecture"}
protocol = { path = "../protocol" }
serde = { version = "1.0.150", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3.3"
single_value_channel = "1.2.2"